Allow use of alternate timestamp for profile instead of server var
    - In situations where it is undesirable to use the server request
    time to identity profile runs (such as when multiple profiles are
    created in a single run), it should be possible to use an alternate
    time.

--- a/src/templates/custom/create.twig
+++ b/src/templates/custom/create.twig
@@ -129,7 +129,7 @@
                       }
                     }else  {
                       $.each( data, function(i, n){
-                         $("#results tbody").append('<tr><td>' + n.meta.url + '</td><td>' + n.meta.SERVER.REQUEST_TIME + '</td><td>' + n.profile['main()'].wt + '</td><td>' + n.profile['main()'].cpu + '</td><td>' + n.profile['main()'].mu + '</td><td>' + n.profile['main()'].pmu + '</td></tr>');
+                         $("#results tbody").append('<tr><td>' + n.meta.url + '</td><td>' + n.meta.profile_ts + '</td><td>' + n.profile['main()'].wt + '</td><td>' + n.profile['main()'].cpu + '</td><td>' + n.profile['main()'].mu + '</td><td>' + n.profile['main()'].pmu + '</td></tr>');
                       });
                     }
                     
