--- a/src/templates/macros/helpers.twig
+++ b/src/templates/macros/helpers.twig
@@ -3,7 +3,11 @@
 {% for k, v in data %}
     <dt>{{ k }}</dt>
     <dd class="text-wrap">
-        {{ v|join(' ') }}
+        {% if not v is iterable %}
+          {{ v|join(' ') }}
+        {% else %}
+          {{ v|json_encode() }}
+        {% endif %}
     </dd>
 {% else %}
     <dt>No {{ name }} data</dt>
