Fix callgraph button close sizing.
It was a bit off before.

--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -340,12 +340,13 @@ tr .no-results {
     background: #888;
     color: #fff;
     display: inline-block;
-    padding: 8px;
-    line-height: 7px;
-    font-size: 14px;
-    height: 8px;
-    width: 8px;
+    padding: 4px;
+    line-height: 12px;
+    font-size: 24px;
+    height: 20px;
+    width: 20px;
     border-radius: 15px;
+    text-align: center;
     -moz-border-radius: 15px;
     -webkit-border-radius: 15px;
     vertical-align: middle;
