--- a/src/templates/runs/flamegraph.twig
+++ b/src/templates/runs/flamegraph.twig
@@ -1,5 +1,9 @@
 {% extends 'layout/base.twig' %}
 
+{% block head %}
+<link href="{{ static('css/d3.flameGraph.css') }}" rel="stylesheet" media="screen">
+{% endblock %}
+
 {% block title %}
 - Flamegraph - {{ profile.meta.url }} - {{ profile.meta('SERVER.REQUEST_TIME')|date(date_format) }}
 {% endblock %}
@@ -10,72 +14,74 @@
 <div class="row-fluid">
 <form class="search-form form-inline" id="form">
 	<div class="control-group span4">
-		<a class="btn" href="javascript: resetZoom();">Reset zoom</a>
+		<a class="btn" id="flamegraph-reset">Reset zoom</a>
 	</div>
 	<div class="control-group span4">
 		<input type="text" class="form-control" id="term">
-		<a class="btn btn-primary" href="javascript: search();">Search</a>
-		<a class="btn" href="javascript: clear();">Clear</a>
+		<a class="btn btn-primary" id="flamegraph-search">Search</a>
+		<a class="btn" id="flamegraph-clear">Clear</a>
 	</div>
 </form>
 </div>
 
 <div class="row-fluid">
     <div id="chart"></div>
-    <hr>
-    <div id="details"></div>
 </div>
-
 {% endblock %}
 
+
 {% block jsfoot %}
-<link href="{{ static('css/d3.flameGraph.css') }}" rel="stylesheet" media="screen">
 <script src="{{ static('js/d3.js') }}"></script>
 <script src="{{ static('js/d3-tip-index.js') }}"></script>
 <script src="{{ static('js/d3.flameGraph.js') }}"></script>
 <script type="text/javascript">
 var flameGraph = d3.flameGraph()
-  .height(540)
-  .width(960)
-  .cellHeight(18)
-  .transitionDuration(750)
-  .transitionEase('cubic-in-out')
-  .sort(true)
-  .title("");
+    .height(540)
+    .width(960)
+    .cellHeight(18)
+    .transitionDuration(750)
+    .transitionEase('cubic-in-out')
+    .sort(true)
+    .title("");
 
 var tip = d3.tip()
-  .direction("s")
-  .offset([8, 0])
-  .attr('class', 'd3-flame-graph-tip')
-  .html(function(d) { return "name: " + d.name + ", value: " + d.value; });
+    .direction("s")
+    .offset([8, 0])
+    .attr('class', 'd3-flame-graph-tip')
+    .html(function(d) {
+        var units = 'µs';
+        return d.name + " &mdash; " + Xhgui.formatNumber(d.value) + units + ' (' + (100 * d.dx, 3) + '%)';
+    });
 
 flameGraph.tooltip(tip);
 
 d3.json("{{ url('run.flamegraph.data', {id: profile.id|trim }) }}", function(error, data) {
-  if (error) return console.warn(error);
-  d3.select("#chart")
-	  .datum(data)
-	  .call(flameGraph);
+    if (error) {
+        return console.warn(error);
+    }
+    d3.select("#chart")
+        .datum(data)
+        .call(flameGraph);
 });
 
 $(document).ready(function(){
-  $("form").submit(function(event){
-    event.preventDefault();
-    search();
-  });
+    $("form").submit(function(event){
+        event.preventDefault();
+        search();
+    });
 });
 
-function search() {
-  flameGraph.search($("#term").val());
-}
+$('#flamegraph-search').on('click', function () {
+    flameGraph.search($("#term").val());
+});
 
-function clear() {
-  $('#term').val('');
-  flameGraph.clear();
-}
+$('#flamegraph-clear').on('click', function() {
+    $('#term').val('');
+    flameGraph.clear();
+});
 
-function resetZoom() {
-  flameGraph.resetZoom();
-}
+$('#flamegraph-reset').on('click', function () {
+    flameGraph.resetZoom();
+});
 </script>
 {% endblock %}
