--- a/webroot/css/d3.flameGraph.css
+++ b/webroot/css/d3.flameGraph.css
@@ -1,12 +1,13 @@
 .d3-flame-graph rect {
-  stroke: #EEEEEE;
+  stroke: #fff;
   fill-opacity: .8;
 }
 
-.d3-flame-graph rect:hover {
-  stroke: #474747;
-  stroke-width: 0.5;
+.d3-flame-graph .frame {
   cursor: pointer;
+}
+.d3-flame-graph .frame:hover .label {
+  color: #fff;
 }
 
 .d3-flame-graph .label {
@@ -31,7 +32,6 @@
 
 .d3-flame-graph .title {
   font-size: 20px;
-  font-family: Verdana;
 }
 
 .d3-flame-graph .label {
@@ -40,8 +40,6 @@
 
 .d3-flame-graph-tip {
   line-height: 1;
-  font-family: Verdana;
-  font-size: 12px;
   padding: 12px;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
