--- a/src/templates/runs/flamegraph.twig
+++ b/src/templates/runs/flamegraph.twig
@@ -9,7 +9,11 @@
 {% endblock %}
 
 {% block content %}
-<h1>Flamegraph for {{ profile.meta.url }} on {{ profile.meta('SERVER.REQUEST_TIME')|date(date_format) }}</h1>
+<div class="row-fluid">
+    <a class="back-link" href="{{ url('run.view', {'id': profile.id|trim}) }}">&laquo; Back to run</a>
+    <h1>Flamegraph for {{ profile.meta.url }}</h1>
+    <h4>{{ profile.meta('SERVER.REQUEST_TIME')|date(date_format) }}</h4>
+</div>
 
 <div class="row-fluid">
 <form class="search-form form-inline" id="form">
@@ -26,6 +30,11 @@
 
 <div class="row-fluid">
     <div id="chart"></div>
+</div>
+
+<div class="alert alert-info">
+    Flamegraphs help visualize where long running methods are, as well as methods
+    that have deep call stacks.
 </div>
 {% endblock %}
 
