flamegraph: Clean up flameGraph.css patch (1)
Follows-up 71f521e3d4dfdb7.

* Undo the overrides and place them in xhgui.css instead.
* Add a class "xhgui-flamegraph" to the main chart element
  so that we can uniquely address flamegraphs within xhgui
  with a higher CSS specificity selector (using the same selector
  as in d3.flameGraph.css won't work given that they have the
  same weight, and load order would break the tie, which currently
  means the upstream one applies last, use a stronger selector
  instead of relying on load order).

This is in preparation of upgrading d3.flameGraph to a newer
version from upstream.

Ref perftools/xhgui#211.

--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -376,6 +376,30 @@ tr .no-results {
 }
 
 /**
+ * FlameGraph
+ *
+ * Note: Uses "body" selector to make sure specificity is higher
+ * than the original styles in d3.flameGraph.css.
+ */
+
+/* Use white stroke instead of grey, to make them invisible on our background */
+body .d3-flame-graph rect,
+body .d3-flame-graph rect:hover {
+    stroke: #fff;
+    stroke-width: 1px;
+}
+/* Instead of stroke, change text color on hover */
+body .d3-flame-graph .frame:hover .label {
+    color: #fff;
+}
+
+/* Inherit our font style instead of hardcoded Verdana 12px */
+body .d3-flame-graph-tip {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+/**
  * Run details
  */
 .back-link {
