[WIP] frontend: Upgrade d3.flameGraph to latest, and upgrade D3 to 4.x
### d3.flameGraph

Originally added in May 2016 as:
- d3.flameGraph [v0.4.2]
- d3.tip [v0.6.7] (its dependency)

At that time, d3.flameGraph required v3.x of d3, which XHGui
already bundled.
The latest version of d3.flameGraph requires v4.x of d4.

Update to:
- d3.flameGraph [v1.0.11-dev]
- d3.tip [v0.7.1] (its dependency)

Preserving two patches:
- d3.flameGraph.js: Override offset to 24px for d3.tip().
- d3.flameGraph.css: Omit d3-flame-graph-tip styles, we have our own.

Change inline script to account for upstream changes:
* Remove redundant 'height' override (matches the default: depth * cellHeight).
* Remove redundant 'sort' override (matches the default: by name ASC).
* Set digits=0 for Xhgui.formatNumber() instead of default digits=2,
  given that the digits are always ".00". This matches the way microsecond
  values are rendered elsewhere in XHGui.

## d3.js

Upgrade to 4.x (v4.0.8 exactly, same as d3.flameGraph uses now).

Apply changes required for D3 version 4 per
<https://github.com/d3/d3/blob/v4.6.0/CHANGES.md>

### xhgui-charts.js
* d3.layout.pie > d3.pie
* d3.time.format > d3.timeFormat

### flamegraph.twig
* 'cubic-in-out' > d3.easeCubic
* tip() html callback: 'name' and 'value are now in d.data.
* tip() html callback: d.dx replaced with d.x0 and d.x1

--- a/webroot/css/d3.flameGraph.css
+++ b/webroot/css/d3.flameGraph.css
@@ -9,7 +9,7 @@
   cursor: pointer;
 }
 
-.d3-flame-graph .label {
+.d3-flame-graph-label {
   pointer-events: none;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -32,10 +32,6 @@
 .d3-flame-graph .title {
   font-size: 20px;
   font-family: Verdana;
-}
-
-.d3-flame-graph .label {
-  background: transparent;
 }
 
 /**
