--- a/src/templates/runs/flamegraph.twig
+++ b/src/templates/runs/flamegraph.twig
@@ -44,15 +44,14 @@
 <script src="{{ static('js/d3.flameGraph.js') }}"></script>
 <script type="text/javascript">
 
-var width = parseInt($('#chart').css('width'), 10);
+var width = $('#chart').width();
 var cellHeight = 18;
 
 var flameGraph = d3.flameGraph()
-    .height(540)
     .width(width)
     .cellHeight(cellHeight)
     .transitionDuration(750)
-    .transitionEase('cubic-in-out')
+    .transitionEase(d3.easeCubic)
     .sort(true);
 
 var tip = d3.tip()
@@ -61,7 +60,7 @@ var tip = d3.tip()
     .attr('class', 'd3-flame-graph-tip')
     .html(function(d) {
         var units = 'µs';
-        return d.name + " &mdash; " + Xhgui.formatNumber(d.value) + units + ' (' + Math.round(100 * d.dx, 3) + '%)';
+        return d.data.name + " &mdash; " + Xhgui.formatNumber(d.data.value, 0) + units + ' (' + Math.round(100 * (d.x1 - d.x0), 3) + '%)';
     });
 
 flameGraph.tooltip(tip);
@@ -70,12 +69,6 @@ d3.json("{{ url('run.flamegraph.data', {id: profile.id|trim }) }}", function(err
     if (error) {
         return console.warn(error);
     }
-
-    flameGraph.height(getDepth(data.data) * cellHeight);
-
-    flameGraph.sort(function (a, b) {
-        return data.sort[a.name] - data.sort[b.name];
-    });
 
     d3.select("#chart")
         .datum(data.data)
@@ -101,19 +94,6 @@ $('#flamegraph-clear').on('click', function() {
 $('#flamegraph-reset').on('click', function () {
     flameGraph.resetZoom();
 });
-
-function getDepth (obj) {
-    var depth = 0;
-    if (obj.children) {
-        obj.children.forEach(function (d) {
-            var tmpDepth = getDepth(d)
-            if (tmpDepth > depth) {
-                depth = tmpDepth
-            }
-        })
-    }
-    return 1 + depth
-}
 
 </script>
 {% endblock %}
