Fix pressing enter in the search box from raising an error.

--- a/src/templates/runs/flamegraph.twig
+++ b/src/templates/runs/flamegraph.twig
@@ -85,7 +85,7 @@ d3.json("{{ url('run.flamegraph.data', {id: profile.id|trim }) }}", function(err
 $(document).ready(function(){
     $("form").submit(function(event){
         event.preventDefault();
-        search();
+        flameGraph.search($('#term').val());
     });
 });
 
