Introduce different storage models: file, pdo (tested on sqlite) and mongo.
New classes for storage
New class for filtering
New class for watched function storage
template updates
other changes.

Initial commit.
Known issues:
- unit tests are not working
- javascript date time picker does not work
- custom view does not work
- search filters should expose more fields

--- a/src/templates/error/view.twig
+++ b/src/templates/error/view.twig
@@ -15,5 +15,6 @@ You should check the following things:
 </ul>
 
 <h5>Stack trace</h5>
+<pre>{{ message }}</pre>
 <pre>{{ stack_trace }}</pre>
 {% endblock %}
