--- a/src/templates/layout/base.twig
+++ b/src/templates/layout/base.twig
@@ -45,9 +45,10 @@
         <hr>
 
         <footer class="row-fluid footer-text">
-            <span class="span4">© Paul Reinheimer &amp; Mark Story 2012</span>
-            <span class="span4">1,000,000 µs = 1 second</span>
-            <span class="span4">1,048,576 bytes = 1 MB</span>
+            <span class="span3">© Paul Reinheimer &amp; Mark Story 2012</span>
+            <span class="span3">1,000,000 µs = 1 second</span>
+            <span class="span3">Save handler: {{ config["save.handler"] }}</span>
+            <span class="span3">1,048,576 bytes = 1 MB</span>
         </footer>
     </div>
 
