--- a/src/templates/layout/base.twig
+++ b/src/templates/layout/base.twig
@@ -27,6 +27,7 @@
                         <li><a href="{{ url('custom.view') }}">Custom View</a></li>
                         <li><a href="{{ url('watch.list') }}">Watch Functions</a></li>
                         <li><a href="{{ url('waterfall.list') }}">Waterfall</a></li>
+                        <li><a href="{{ url('import') }}">Import</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
