Restore datepicker Allow argument in url to be only date

--- a/src/templates/runs/list.twig
+++ b/src/templates/runs/list.twig
@@ -23,8 +23,8 @@
         <div class="control-group span4">
             <label class="control-label" for="startDate">Date range</label>
             <div class="controls">
-                <input type="text" id="startDate" data-date-format="yyyy-mm-dd" name="startDate" class="span2" value="{{ search.startDate }}">
-                <input type="text" id="endDate" data-date-format="yyyy-mm-dd" name="endDate" class="span2" value="{{ search.endDate }}">
+                <input type="text" id="startDate" data-date-format="yyyy-mm-dd" name="startDate" class="datepicker span2" value="{{ search.startDate }}">
+                <input type="text" id="endDate" data-date-format="yyyy-mm-dd" name="endDate" class="datepicker span2" value="{{ search.endDate }}">
                 <small class="muted">Either unix timestamps or date time string formatted as YYYY-MM-DD H:i:s</small>
             </div>
         </div>
