--- a/src/templates/runs/list.twig
+++ b/src/templates/runs/list.twig
@@ -18,7 +18,7 @@
         <i class="icon-search"></i> Search
     </a>
 
-    <form action="{{ url('home') }}" method="get" class="row search-form form-inline">
+    <form action="{{ url('home') }}" method="get" class="row hide search-form form-inline">
         <a href="#" class="search-collapse close" title="Hide search form">&times;</a>
         <div class="control-group span4">
             <label class="control-label" for="startDate">Date range</label>
