Search form fix: url is preserved.

--- a/src/templates/runs/list.twig
+++ b/src/templates/runs/list.twig
@@ -31,7 +31,7 @@
         <div class="control-group span4">
             <label class="control-label" for="url">URL</label>
             <div class="controls">
-                <input type="text" id="url" name="url" value="{{ search.getUrl() }}">
+                <input type="text" id="url" name="url" value="{{ search.url }}">
             </div>
         </div>
         <div class="form-actions">
