Use simple url for consistency

--- a/src/templates/runs/paginated-list.twig
+++ b/src/templates/runs/paginated-list.twig
@@ -60,7 +60,7 @@
                     addr,
                     50,
                     'url.view',
-                    {'url': result.meta.url}
+                    {'url': result.meta.simple_url}
                 ) }}
             </td>
             <td>
