--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -26,7 +26,7 @@
         <div class="control-group span4">
             <label class="control-label" for="remote_addr">IP</label>
             <div class="controls">
-                <input type="text" id="remote_addr" name="remote_addr" value="{{ search.remote_addr }}">
+                <input type="text" id="remote_addr" name="remote_addr" value="{{ search.ip }}">
             </div>
         </div>
         <div class="control-group span4">
