--- a/src/templates/runs/view.twig
+++ b/src/templates/runs/view.twig
@@ -26,7 +26,7 @@
             <li>{{ helpers.property_list('GET', result.meta('get')) }}</li>
 
             <li class="nav-header">SERVER</li>
-            <li>{{ helpers.property_list('SERVER', result.meta('SERVER')) }}
+            <li>{{ helpers.property_list('SERVER', result.meta('SERVER')|filter((v, k) => not exclude_env_vars or result.meta('env')[k] is not defined)) }}</li>
 
             <li class="nav-header">Waterfall</li>
             <li><strong>By IP</strong> <a href="{{ url('waterfall.list', {'remote_addr': result.meta.SERVER.REMOTE_ADDR, 'request_start': result.meta.SERVER.REQUEST_TIME - 5, 'request_end': result.meta.SERVER.REQUEST_TIME + 15}) }}">{{ result.meta.SERVER.REMOTE_ADDR }}</a></li>
