Add Server Name filter

--- a/templates/runs/list.twig
+++ b/templates/runs/list.twig
@@ -28,6 +28,10 @@
             </div>
         </div>
         <div class="control-group span4">
+            <label class="control-label" for="server-name">Server Name</label>
+            <div class="controls">
+                <input type="text" id="server-name" name="server_name" value="{{ search.server_name }}">
+            </div>
             <label class="control-label" for="url">URL</label>
             <div class="controls">
                 <input type="text" id="url" name="url" value="{{ search.url }}">
