--- a/templates/runs/compare.twig
+++ b/templates/runs/compare.twig
@@ -2,11 +2,11 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block title %}
-- Compare - {{ base_run.meta.simple_url }}
+- Compare - {{ base_run.meta.SERVER.SERVER_NAME }}{{ base_run.meta.simple_url }}
 {% endblock %}
 
 {% block content %}
-<h1>Compare runs for {{ base_run.meta.simple_url }}</h1>
+<h1>Compare runs for {{ base_run.meta.SERVER.SERVER_NAME }}{{ base_run.meta.simple_url }}</h1>
 
 {% if not base_run %}
 <div class="row-fluid row-spaced">
