--- a/templates/runs/url.twig
+++ b/templates/runs/url.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Runs for {{ url }} (simplified)</h1>
+<h1>Runs for {{ search.server_name }}{{ url }} (simplified)</h1>
 
 <div class="row-fluid">
     <div id="time-line-graph" class="chart-container span6"></div>
@@ -19,6 +19,7 @@
     </a>
 
     <form action="{{ url('url.view') }}" method="get" class="row hide search-form form-inline">
+        <input type="hidden" name="server_name" value="{{ search.server_name }}" />
         <input type="hidden" name="url" value="{{ search.url }}" />
         <a href="#" class="search-collapse close" title="Hide search form">&times;</a>
         <div class="control-group span4">
