Show flash messages at top of page

--- a/templates/layout/base.twig
+++ b/templates/layout/base.twig
@@ -36,7 +36,9 @@
     <div class="container-fluid">
         {% if flash.success %}
         <div class="flash alert alert-success">
-            {{ flash.success }}
+            {% for msg in flash.success %}
+                <li>{{ msg }}</li>
+            {% endfor %}
         </div>
         {% endif %}
 
